src/static/styles/ui.scss
.ui-message {
    display: flex;
    padding: var(--spacings-xLarge);
    align-items: flex-start;

    animation: fadeIn 350ms;

    svg {
        width: var(--icon-size-normal);
        height: var(--icon-size-normal);
        margin-right: var(--spacings-medium);

        path {
            fill: currentColor;
        }
    }
}

@keyframes fadeIn {
    0% {
        opacity: 0.2;
        transform: translateY(-0.4rem);
    }
    30% {
        opacity: 0.4;
        transform: translateY(0);
    }
    100% {
        opacity: 1;
    }
}

.ui-message__content {
    flex: 1;
}
.ui-message--warning {
    background: var(--status-warning-main-backgroundColor);
    color: var(--status-warning-main-color);
}
.ui-message--error {
    background: var(--status-error-main-backgroundColor);
    color: var(--status-error-main-color);
}
.ui-message--valid {
    background: var(--status-valid-main-backgroundColor);
    color: var(--status-valid-main-color);
}
.ui-message--info {
    background: var(--status-info-main-backgroundColor);
    color: var(--status-info-main-color);
}
.ui-message--borderTop {
    border-top-left-radius: var(--border-radius-regular);
    border-top-right-radius: var(--border-radius-regular);
}
.ui-message--borderBottom {
    border-bottom-left-radius: var(--border-radius-regular);
    border-bottom-right-radius: var(--border-radius-regular);
}
.ui-message--marginTop {
    margin-top: var(--spacings-xLarge);
}
.ui-message--marginBottom {
    margin-bottom: var(--spacings-xLarge);
}

.ui-section {
    border-radius: var(--border-radius-regular);
    overflow: hidden;
}
.ui-section--marginTop {
    margin-top: var(--spacings-xLarge);
}
.ui-section--marginBottom {
    margin-bottom: var(--spacings-xLarge);
}
.ui-section__item {
    margin-bottom: 1px;
    padding: var(--spacings-xLarge);
    flex: 1;
    background: var(--colors-background_0-backgroundColor);
    color: var(--colors-background_0-color);
}
.ui-section__headerTitle {
    padding: 0;
    margin: 0;
}

.ui-group {
    width: 100%;
    overflow: hidden;
    border-radius: var(--border-radius-regular);
    background: var(--colors-background_0-backgroundColor);
    color: var(--colors-background_0-color);
    margin-bottom: var(--spacings-medium);
}
.ui-group__header {
    margin: 0;
    padding: 0;
}
.ui-group__content {
    overflow: hidden;
    max-height: 0;
    transition: max-height 200ms ease-in-out;
}
.ui-group__item:not(:last-child) {
    border-bottom: var(--border-width-slim) solid
        var(--colors-background_1-backgroundColor);
}
.ui-group__content--open {
    max-height: 600px;
    overflow: auto;
}

.ui-group__headerButton {
    font-family: var(--font-main);
    background: none;
    display: flex;
    width: 100%;
    border: 0;
    justify-content: space-between;
    align-items: center;

    transition: all 150ms ease-in-out;
    border-radius: var(--border-radius-regular);
    border: var(--border-width-medium) solid transparent;
    // Remove border from padding.
    padding: calc(var(--spacings-xLarge) - 2 * var(--border-width-medium));
}
.ui-group__headerButton:hover {
    background: var(--colors-background_2-backgroundColor);
    color: var(--colors-background_2-color);
}
.ui-group__headerButton:focus {
    outline: 0;
    border: var(--border-width-medium) solid
        var(--colors-primary_2-backgroundColor);
}
.ui-group__headerButton:active {
    background: var(--colors-background_3-backgroundColor);
    color: var(--colors-background_3-color);
}
.ui-group__headerButton--disabled,
.ui-group__headerButton--disabled:hover {
    background: var(--colors-background_0-backgroundColor);
    color: var(--colors-background_0-color);
    opacity: 0.4;
}
.ui-group__headerButton__title {
    display: block;
    flex: 1;
    text-align: left;
    padding: 0 var(--spacings-medium);
}

.ui-heading {
    margin: 0;
    padding: 0;
}
.ui-heading-page {
    display: flex;
    padding: var(--spacings-xLarge);
    position: relative;
    justify-content: center;
    margin-bottom: var(--spacings-xLarge);
}
.ui-heading-page__back:link,
.ui-heading-page__back:visited,
.ui-heading-page__back:hover {
    position: absolute;
    left: 0;
    top: 0;
    padding: var(--spacings-xLarge);
    color: var(--text-colors-primary);
    text-decoration: none;
    transition: opacity 150ms ease-in;

    svg {
        margin-right: var(--spacings-medium);
    }
}
.ui-heading-page__back:active {
    opacity: 0.6;
}

.ui-input-radio {
    display: flex;
    width: 100%;
    padding: var(--spacings-xLarge);
    background: var(--colors-background_0-backgroundColor);
    color: var(--colors-background_0-color);

    border-radius: var(--border-radius-regular);

    border: var(--border-width-medium) solid transparent;
    // Remove border from padding.
    padding: calc(var(--spacings-xLarge) - 2 * var(--border-width-medium));
}
.ui-input-radio:hover {
    background: var(--colors-background_2-backgroundColor);
    color: var(--colors-background_2-color);
}
.ui-input-radio:active {
    background: var(--colors-background_3-backgroundColor);
    color: var(--colors-background_3-color);
}
.ui-input-radio__input {
    margin: 0;
    position: absolute;
    height: 0;
    width: 0;
}
.ui-input-radio__input:focus + .ui-input-radio {
    outline: 0;
    border: var(--border-width-medium) solid
        var(--colors-primary_2-backgroundColor);
}
.ui-input-radio__box {
    border-radius: 50%;
    height: 1.25rem;
    width: 1.25rem;
    --padding: 2px;
    --border: 2px;
    border: var(--border) solid var(--text-colors-primary);
    padding: var(--padding);
}
.ui-input-radio__box::after {
    content: '';
    display: block;
    height: calc(1rem - 2 * var(--padding));
    width: calc(1rem - 2 * var(--padding));
    border-radius: 50%;
}
.ui-input-radio__input:checked + .ui-input-radio .ui-input-radio__box::after {
    background: var(--text-colors-primary);
}
.ui-input-radio__title {
    flex: 1;
}

.ui-input-radioGroup {
    border: 0;
    padding: 0;
    margin: 0;
}
.ui-input-radioGroup__hiddenLegend {
    position: absolute;
    clip: rect(0 0 0 0);
}

.ui-button {
    display: flex;
    width: 100%;
    cursor: pointer;

    border: var(--border-width-medium) solid transparent;
    // Remove border from padding.
    padding: calc(var(--spacings-xLarge) - 2 * var(--border-width-medium));

    text-align: left;
    justify-content: space-between;
    align-items: center;
    transition: filter 150ms ease-in;

    > :not(.ui-button__coloredIcon) {
        svg,
        path {
            fill: currentColor;
        }
    }
}
.ui-button--tertiary {
    background: var(--colors-background_0-backgroundColor);
    color: var(--colors-background_0-color);
}
.ui-button:hover {
    filter: brightness(90%);
}
.ui-button:active {
    filter: brightness(80%);
}
.ui-button:focus {
    outline: 0;
    border: var(--border-width-medium) solid
        var(--colors-primary_2-backgroundColor);
    border-radius: var(--border-radius-regular);
}
.ui-button--disabled > * {
    opacity: 0.2;
}
.ui-button--disabled:hover {
    filter: none;
}

.ui-textContainer--primary {
    color: var(--text-colors-primary);
}
.ui-textContainer--secondary {
    color: var(--text-colors-secondary);
}
.ui-textContainer--disabled {
    color: var(--text-colors-disabled);
}

.ui-notifications {
    position: absolute;
    top: var(--spacings-xLarge);
    right: var(--spacings-xLarge);

    max-height: 70vh;
    overflow: auto;
}

